Update CSS workaround to avoid a double scrollbar
Create a separate CSS class to handle unwanted second scrollbar on
forms with an embedded carousel on Firefox. Closes issue #1144.

Thanks to Rodrigo EvilNet Olguin (@evilnet1), @qra, @vintager for
reports and Matthias Löblich (@startmat) for the research.

--- a/mayan/apps/appearance/static/appearance/css/appearance.css
+++ b/mayan/apps/appearance/static/appearance/css/appearance.css
@@ -294,12 +294,15 @@ a i {
 .zero-margin {
     margin-right: 0;
     margin-left: 0;
+}
 
-    > .col,
-    > [class*="col-"] {
-        padding-right: 0;
-        padding-left: 0;
-    }
+/* Remove scroll bar caused by bootstraps -15px on .row margins */
+/*
+ * Used by the generic_form template to avoid displaying a second scrollbar
+ * for the viewport when it has a carousel.
+ */
+.zero-margin .row-avoid-second-scrollbar {
+    margin-bottom: -15px;
 }
 
 @media (min-width: 768px) {
